7.Ingress/Beer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  beer-deploment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beerapp
  template:
    metadata:
      name: beerapp
      labels:
        app: beerapp
    spec:
      containers:
        - name: beerapp
          image: rudzmic1/beerapp:1.0
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: beer-service
spec:
  type: ClusterIP
  selector:
    app: beerapp
  ports:
  - port: 80
    targetPort: 5000
